--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "icons": "svgr public/assets/svg -d components/Icons --ignore-existing --icon"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
+    "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
