--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "icons": "svgr public/assets/svg -d components/Icons --ignore-existing --icon"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@gsap/react": "^2.1.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
